# Skipper

./: .gitignore  CMakeLists.txt  Config.h  Dockerfile  Logger.h  README.md  Tracer.h  client.cpp  client_old.cpp  crash-0e2c2d24cd927b6a76bd87819708dd8a06a02f7d  fuzz.ll  fuzz_new.ll  hello_world.bc  hello_world.ll  install.sh  means.json  r1.txt  r2.txt  script.py  script.sh  t1.txt  t2.txt  timer.py
LLVM/llvm-notes/: code_notes.txt  ideas.txt  libfuzzer_structure.txt
LLVM/llvm_pass/: MySkipperPass.cpp  MySkipperPass.h  fetch_pass.sh  update_pass.sh
bn256/: bn256_G.go  bn256_curve_point.go  bn256_fast.go  bn256_gfp.go  bn256_handlers.go  libbn256.h
bn256/cloudflare/: gfp.go  gfp_decl.go  mul_bmi2_amd64.h
docs/: Doxyfile
docs/html/: Config_8h.html  Logger_8h.html  (+145 more)
fuzz/: .gitignore  CMakeLists.txt  Makefile  a  build.sh  factorial.asm  func.asm  fuzz.cpp  fuzz_app  include_funcs.cpp  include_funcs.h  libbn256.h
fuzz/llvm_pass/: MySkipperPass.cpp  Skipper.cpp  Skipper.h  building_llvm.sh  update_pass.sh
include/: func_bounds.h  funcs.h  get_all_symbols.h  my_tracer.h  thread_data.h  types.h
input/: old_set.txt  settings.bn.json  settings.fuzz.json  settings.json  settings.openssl.json  settings_bn.json  settings_inline_asm.json
llvm-notes/: ideas.txt  llvm-ir-syntax.txt
plot_scripts/: plot_dist.py  plot_func.py  plot_hist.py  plot_kde.py
scripts/: build_bn.sh  build_client.sh  build_fuzz.sh  build_llvm.sh  crash_handler.py  debug_run.sh  fast_run.sh  get_global_funcs.py  plot.sh  run_timers.sh
src/: client.cpp  loggers.h  my_trace_asm.s  trace_asm.s
(+161 files in other folders)
